@@ -1,3 +1,14 @@
+2012-08-10  Kinuko Yasuda  <kinuko@chromium.org>
+
+        Support creating File object from FileSystem URL for files in FileSystem API
+        https://bugs.webkit.org/show_bug.cgi?id=93706
+
+        Reviewed by Darin Fisher.
+
+        * chromium/public/WebBlobData.h:
+        * chromium/public/WebHTTPBody.h:
+        (WebHTTPBody):
+
 2012-08-09  James Robinson  <jamesr@chromium.org>
 
         [chromium] Remove forwarding headers for compositor-related WebKit API and update includes
